[gd_scene load_steps=19 format=3 uid="uid://bjkjqnwrnkn11"]

[ext_resource type="Script" path="res://scripts/level_getter.gd" id="1_gh7pr"]
[ext_resource type="Texture2D" uid="uid://cswjhivdhxdr0" path="res://art/backgrounds/background.png" id="1_nvvsf"]
[ext_resource type="Texture2D" uid="uid://da50fbbwrt10s" path="res://art/tileset/gold tileset.png" id="2_kg4hw"]
[ext_resource type="PackedScene" uid="uid://cqjq8lc7saepo" path="res://circuit/lever.tscn" id="3_3fi0o"]
[ext_resource type="Texture2D" uid="uid://pwkikvwbjydt" path="res://art/tileset/silver tileset.png" id="3_cvagt"]
[ext_resource type="PackedScene" uid="uid://dw6jyxmoye1vt" path="res://circuit/pylon off.tscn" id="4_fbvki"]
[ext_resource type="PackedScene" uid="uid://drs0id18vcdce" path="res://circuit/right bend.tscn" id="4_q2rs1"]
[ext_resource type="PackedScene" uid="uid://bog1kbq7r5agl" path="res://circuit/left bend.tscn" id="6_fbeet"]
[ext_resource type="PackedScene" uid="uid://c1xennrbxtgfw" path="res://circuit/horizontal.tscn" id="7_jt3a1"]
[ext_resource type="PackedScene" uid="uid://jrf62ji20o7o" path="res://circuit/outlet.tscn" id="8_5xlpd"]
[ext_resource type="PackedScene" uid="uid://cbtpekxdxkv1a" path="res://circuit/monolith or.tscn" id="9_5ak0g"]
[ext_resource type="PackedScene" uid="uid://huxko32efm1x" path="res://circuit/gate.tscn" id="9_j1li1"]
[ext_resource type="PackedScene" uid="uid://bw2c421aeq6a7" path="res://art/character/player.tscn" id="10_pj533"]
[ext_resource type="PackedScene" uid="uid://b1p7enjdkbjix" path="res://art/character/gandalf.tscn" id="12_7yxdj"]
[ext_resource type="PackedScene" uid="uid://dnb8jofsuamjs" path="res://hud/dialog_prompt.tscn" id="13_41qoa"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pjxrw"]
texture = ExtResource("2_kg4hw")
texture_region_size = Vector2i(68, 68)
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, 16.5, -34, 34, 34, 34, 34, 16)
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -34, 34, -34, 34.5, 34, 16, 33.5)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, -34, -16, -34, -16, 34, -34, 34)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, 1, 34, 1, 34, -10.5, -34, -10.5)
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, -34, -34, -16, 34, -15.5, 34, -34)
2:2/0 = 0
3:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, 1, -14, 1, -13.5, 5, 14, 5, 14, 1, 34, 1, 34, -11, -34, -10.5)
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w70n7"]
texture = ExtResource("3_cvagt")
texture_region_size = Vector2i(68, 68)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -34, 16.5, 34, 34, 34, 34, -34)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, -34, -34, 34, -16, 34, -16, -34)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, 1, 34, 1, 34.5, -9.5, -34, -10)
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, -34, 34, -34, 34, -16, -34, -16)
2:2/0 = 0
3:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34, 1, -14, 1, -14, 6, 14, 6, 14, 1, 34, 1, 34, -10, -34, -10)
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_y02vx"]
tile_size = Vector2i(68, 68)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_pjxrw")
sources/2 = SubResource("TileSetAtlasSource_w70n7")

[node name="Level5" type="Node2D"]
script = ExtResource("1_gh7pr")

[node name="TileMapLayer" type="TileMapLayer" parent="."]

[node name="Background" type="Sprite2D" parent="TileMapLayer"]
position = Vector2(307, 272)
scale = Vector2(2.42578, 3.62891)
texture = ExtResource("1_nvvsf")

[node name="TileMap" type="TileMap" parent="TileMapLayer"]
tile_set = SubResource("TileSet_y02vx")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2, 0, 2, 65538, 0, 3, 65538, 0, 4, 65538, 0, 5, 65538, 0, 6, 65538, 0, 7, 65538, 0, 8, 131074, 0, 65544, 131074, 1, 131080, 131074, 1, 196616, 131074, 1, 262152, 131074, 1, 327688, 131074, 1, 65536, 2, 1, 131072, 2, 1, 196608, 2, 1, 262144, 2, 1, 327680, 2, 1, 393217, 65538, 2, 393218, 65538, 2, 393219, 65538, 2, 393220, 65538, 2, 393221, 65538, 2, 393222, 65538, 2, 393223, 65538, 2, 393224, 131074, 2, 393216, 2, 2, 65537, 196610, 0, 65538, 65538, 1, 65539, 131074, 3, 65540, 131074, 3, 65541, 65538, 1, 65542, 196610, 0, 65543, 196610, 0, 131079, 196610, 1, 131078, 196610, 1, 131077, 65538, 3, 131076, 196610, 1, 131075, 196610, 1, 131074, 65538, 3, 131073, 196610, 1, 327686, 196610, 3, 327687, 196610, 2, 262151, 196610, 2, 196615, 196610, 2, 196614, 196610, 2, 196613, 196610, 2, 196612, 196610, 2, 196611, 196610, 2, 196610, 196610, 2, 196609, 196610, 2, 262145, 196610, 2, 327681, 196610, 2, 327682, 196610, 2, 327683, 196610, 2, 327684, 196610, 2, 327685, 196610, 2, 262146, 196610, 2, 262147, 196610, 2, 262148, 196610, 2, 262149, 196610, 2, 262150, 196610, 2, 1, 65538, 0)

[node name="entities" type="Node" parent="."]

[node name="lv5 pylon off" parent="entities" instance=ExtResource("4_fbvki")]
position = Vector2(170, 306)

[node name="lv5 lever" parent="entities" instance=ExtResource("3_3fi0o")]
position = Vector2(306, 306)

[node name="lv5 right bend" parent="entities" instance=ExtResource("4_q2rs1")]
position = Vector2(170, 238)

[node name="lv5 monolith" parent="entities" instance=ExtResource("9_5ak0g")]
position = Vector2(238, 238)

[node name="lv5 left bend" parent="entities" instance=ExtResource("6_fbeet")]
position = Vector2(306, 238)

[node name="lv5 right bend 2" parent="entities" instance=ExtResource("4_q2rs1")]
position = Vector2(238, 170)

[node name="lv5 horizontal" parent="entities" instance=ExtResource("7_jt3a1")]
position = Vector2(306, 170)

[node name="lv5 outlet" parent="entities" instance=ExtResource("8_5xlpd")]
position = Vector2(374, 170)

[node name="lv5 gate" parent="entities" instance=ExtResource("9_j1li1")]
position = Vector2(442, 136)

[node name="lv5 dialog" parent="entities" instance=ExtResource("13_41qoa")]
position = Vector2(440, 373)

[node name="gandalf" parent="entities" instance=ExtResource("12_7yxdj")]
position = Vector2(390, 353)

[node name="player" parent="entities" instance=ExtResource("10_pj533")]
position = Vector2(441, 346)

[node name="Camera2D" type="Camera2D" parent="entities/player"]
limit_left = 0
limit_top = 0
limit_right = 700
limit_bottom = 500
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.2
drag_vertical_offset = 0.2

[connection signal="state_changed" from="entities/lv5 lever" to="entities/lv5 monolith" method="_change_right_state"]
[connection signal="state_changed" from="entities/lv5 lever" to="entities/lv5 left bend" method="_change_state"]
[connection signal="monolith_changed" from="entities/lv5 monolith" to="entities/lv5 right bend 2" method="_change_state"]
[connection signal="monolith_changed" from="entities/lv5 monolith" to="entities/lv5 horizontal" method="_change_state"]
[connection signal="monolith_changed" from="entities/lv5 monolith" to="entities/lv5 outlet" method="_change_state"]
[connection signal="monolith_changed" from="entities/lv5 monolith" to="entities/lv5 gate" method="_change_gate_state"]
[connection signal="dialog_message" from="entities/lv5 dialog" to="entities/player" method="_show_dialog"]
